chore: declare module as only available on ios

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,9 +1,6 @@
 {
-  "platforms": ["ios", "android", "web"],
+  "platforms": ["ios"],
   "ios": {
     "modules": ["ExpoDigitalWalletModule"]
-  },
-  "android": {
-    "modules": ["expo.modules.digitalwallet.ExpoDigitalWalletModule"]
   }
 }
